Fix loading spinner on mobile

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -264,7 +264,7 @@ body.sessionopen .sessionboxwrapper {
 
 .loginloadingspinner {
 	position:absolute;
-	bottom:-40px;
+	bottom:90px;
 	left:0;
 	right:0;
 	background-color:rgba(255,255,255,.8);
